2008-07-20  Andre Klapper  <a9016009@gmx.de>

	* C/evolution.xml: Fixed comments 201 to 317 of bug #438479.

2008-07-20  Jorge Gonzalez  <jorgegonz@svn.gnome.org>

	* es/es.po: Updated Spanish translation

2008-07-20  Andre Klapper  <a9016009@gmx.de>

	* C/evolution.xml: Fixed comments 181 to 200 of bug #438479.

2008-07-20  Andre Klapper  <a9016009@gmx.de>

	* C/evolution.xml: Fixed comments 161 to 180 of bug #438479.

2008-07-20  Andre Klapper  <a9016009@gmx.de>

	* C/evolution.xml: Fixed comments 141 to 160 of bug #438479.

2008-07-20  Andre Klapper  <a9016009@gmx.de>

	* C/evolution.xml: Fixed comments 121 to 140 of bug #438479.
	Use &z-3rdParty; instead of *.

2008-07-20  Andre Klapper  <a9016009@gmx.de>

	* C/evolution.xml: Fixed comments 81 to 120 of bug #438479.
	Synced dialogue vs dialog. Fixed two duplicated IDs.

2008-07-20  Andre Klapper  <a9016009@gmx.de>

	* C/evolution.xml: Fixed comments 61 to 80 of bug #438479.

2008-07-20  Andre Klapper  <a9016009@gmx.de>

	* C/evolution.xml: Fixed comments 41 to 60 of bug #438479.

2008-07-20  Andre Klapper  <a9016009@gmx.de>

	* C/evolution.xml: Fixed comments 21 to 40 of bug #438479.

2008-07-20  Andre Klapper  <a9016009@gmx.de>

	* C/evolution.xml: Replace all "e-mail list" by "message list".
	Fixed comments 1 to 20 of bug #438479.

2008-07-20  Andre Klapper  <a9016009@gmx.de>

	* C/evolution.xml: Remove more wrong whitespaces.

2008-07-20  Andre Klapper  <a9016009@gmx.de>

	* C/evolution.xml: Removed braindead whitespaces, fix duplicated
	whitespaces, fix spellings.

2008-07-05  Jorge Gonzalez  <jorgegonz@svn.gnome.org>

	* es/es.po: Updated Spanish translation 

2008-06-30  Matthew Barnes  <mbarnes@redhat.com>

	* Makefile.am:
	Run xmllint on C/evolution.xml when building with "make check"
	or "make distcheck".  Should hopefully prevent any more invalid
	DocBook syntax from slipping into releases.

	* C/evolution.xml:
	Fix some issues that xmllint caught.

2008-06-27 Jorge Gonzalez  <jorgegonz@svn.gnome.org>